--- a/OpenCV_3/OpenCV_3.vcxproj.filters
+++ b/OpenCV_3/OpenCV_3.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Util.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="main11.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Filter.h">
