--- a/OpenCV_3/OpenCV_3.vcxproj
+++ b/OpenCV_3/OpenCV_3.vcxproj
@@ -144,7 +144,7 @@
   <ItemGroup>
     <ClCompile Include="Color.cpp" />
     <ClCompile Include="Filter.cpp" />
-    <ClCompile Include="main11.cpp" />
+    <ClCompile Include="1.cpp" />
     <ClCompile Include="Pixel.cpp" />
     <ClCompile Include="Util.cpp" />
   </ItemGroup>
