--- a/OpenCV_3/OpenCV_3.vcxproj.filters
+++ b/OpenCV_3/OpenCV_3.vcxproj.filters
@@ -27,7 +27,10 @@
     <ClCompile Include="Util.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="1.cpp">
+    <ClCompile Include="01.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="02.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
