--- a/OpenCV_3/OpenCV_3.vcxproj
+++ b/OpenCV_3/OpenCV_3.vcxproj
@@ -143,6 +143,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="02.cpp" />
+    <ClCompile Include="03.cpp" />
     <ClCompile Include="Color.cpp" />
     <ClCompile Include="Filter.cpp" />
     <ClCompile Include="01.cpp" />
