--- a/OpenCV_3/OpenCV_3.vcxproj.filters
+++ b/OpenCV_3/OpenCV_3.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="12.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="13.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Filter.h">
