--- a/OpenCV_3/OpenCV_3.vcxproj
+++ b/OpenCV_3/OpenCV_3.vcxproj
@@ -148,6 +148,7 @@
     <ClCompile Include="11.cpp" />
     <ClCompile Include="12.cpp" />
     <ClCompile Include="13.cpp" />
+    <ClCompile Include="21.cpp" />
     <ClCompile Include="Color.cpp" />
     <ClCompile Include="Filter.cpp" />
     <ClCompile Include="01.cpp" />
