--- a/OpenCV_3/OpenCV_3.vcxproj
+++ b/OpenCV_3/OpenCV_3.vcxproj
@@ -148,6 +148,7 @@
     <ClCompile Include="11.cpp" />
     <ClCompile Include="12.cpp" />
     <ClCompile Include="13.cpp" />
+    <ClCompile Include="23.cpp" />
     <ClCompile Include="22.cpp" />
     <ClCompile Include="21.cpp" />
     <ClCompile Include="Color.cpp" />
