--- a/OpenCV_3/OpenCV_3.vcxproj.filters
+++ b/OpenCV_3/OpenCV_3.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="22.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="23.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Filter.h">
