--- a/OpenCV_4/OpenCV_4.vcxproj.filters
+++ b/OpenCV_4/OpenCV_4.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="13.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="14.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Color.h">
