--- a/OpenCV_4/OpenCV_4.vcxproj
+++ b/OpenCV_4/OpenCV_4.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="12.cpp" />
     <ClCompile Include="13.cpp" />
     <ClCompile Include="14.cpp" />
+    <ClCompile Include="15.cpp" />
     <ClCompile Include="Color.cpp" />
     <ClCompile Include="Edge.cpp" />
     <ClCompile Include="Filter.cpp" />
