--- a/OpenCV_4/OpenCV_4.vcxproj.filters
+++ b/OpenCV_4/OpenCV_4.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="21.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="22.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Color.h">
