--- a/OpenCV_4/OpenCV_4.vcxproj
+++ b/OpenCV_4/OpenCV_4.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="15.cpp" />
     <ClCompile Include="21.cpp" />
     <ClCompile Include="22.cpp" />
+    <ClCompile Include="23.cpp" />
     <ClCompile Include="Color.cpp" />
     <ClCompile Include="Edge.cpp" />
     <ClCompile Include="Filter.cpp" />
