--- a/OpenCV_4/OpenCV_4.vcxproj.filters
+++ b/OpenCV_4/OpenCV_4.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="23.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="24.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Color.h">
