--- a/OpenCV_4/OpenCV_4.vcxproj
+++ b/OpenCV_4/OpenCV_4.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="13.cpp" />
     <ClCompile Include="14.cpp" />
     <ClCompile Include="15.cpp" />
+    <ClCompile Include="25.cpp" />
     <ClCompile Include="21.cpp" />
     <ClCompile Include="22.cpp" />
     <ClCompile Include="23.cpp" />
