--- a/OpenCV_4/OpenCV_4.vcxproj
+++ b/OpenCV_4/OpenCV_4.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="22.cpp" />
     <ClCompile Include="23.cpp" />
     <ClCompile Include="24.cpp" />
+    <ClCompile Include="31.cpp" />
     <ClCompile Include="Color.cpp" />
     <ClCompile Include="Edge.cpp" />
     <ClCompile Include="Filter.cpp" />
