--- a/OpenCV_4/OpenCV_4.vcxproj.filters
+++ b/OpenCV_4/OpenCV_4.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="25.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="31.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Color.h">
