--- a/OpenCV_4/OpenCV_4.vcxproj.filters
+++ b/OpenCV_4/OpenCV_4.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="33.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="34.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Color.h">
