실습 6 기반 소스 포함

--- a/OpenCV_6/OpenCV_6.vcxproj
+++ b/OpenCV_6/OpenCV_6.vcxproj
@@ -142,6 +142,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Edge.cpp" />
+    <ClCompile Include="ImageAnalysis.cpp" />
+    <ClCompile Include="Morph.cpp" />
+    <ClCompile Include="Pixel.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Edge.h" />
+    <ClInclude Include="ImageAnalysis.h" />
+    <ClInclude Include="Morph.h" />
+    <ClInclude Include="Pixel.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
