--- a/OpenCV_6/OpenCV_6.vcxproj.filters
+++ b/OpenCV_6/OpenCV_6.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="Color.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="12.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Edge.h">
