--- a/OpenCV_6/OpenCV_6.vcxproj
+++ b/OpenCV_6/OpenCV_6.vcxproj
@@ -144,6 +144,7 @@
   <ItemGroup>
     <ClCompile Include="11.cpp" />
     <ClCompile Include="12.cpp" />
+    <ClCompile Include="13.cpp" />
     <ClCompile Include="Color.cpp" />
     <ClCompile Include="Edge.cpp" />
     <ClCompile Include="Filter.cpp" />
