--- a/OpenCV_6/OpenCV_6.vcxproj.filters
+++ b/OpenCV_6/OpenCV_6.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="13.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="14.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Edge.h">
