--- a/OpenCV_6/OpenCV_6.vcxproj
+++ b/OpenCV_6/OpenCV_6.vcxproj
@@ -142,6 +142,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="1.cpp" />
     <ClCompile Include="11.cpp" />
     <ClCompile Include="12.cpp" />
     <ClCompile Include="13.cpp" />
