--- a/OpenCV_6/OpenCV_6.vcxproj.filters
+++ b/OpenCV_6/OpenCV_6.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="15.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="1.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Edge.h">
